k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suite-clinica-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: suite-clinica
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
