k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suite-clinica-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "clinica-corposostenibile-cert"
    networking.gke.io/v1beta1.FrontendConfig: "suite-clinica-frontend-config"
spec:
  rules:
  - host: clinica.corposostenibile.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: suite-clinica-service
            port:
              number: 80
